[package]
name = "coi-rocket"
version = "0.2.1"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nashenas88/coi-rocket"
description = "coi-rocket provides integration support between coi and rocket"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
coi = "0.10.2"
coi-rocket-derive = { path = "coi-rocket-derive", version = "0.2.0" }
rocket = "0.5.0"

[features]
default = []
debug = ["coi/debug"]
