[package]
name = "coi-rocket-derive"
version = "0.2.1"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nashenas88/coi-rocket"
description = "Provides derives for coi-rocket"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.39", features = ["full"] }
quote = "1.0.33"
proc-macro2 = "1.0.70"

[dev-dependencies]
coi = { version = "0.10.3" }
coi-rocket = { path = ".." }
rocket = "0.5.0"
