[package]
name = "readme-test"
version = "0.1.0"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nashenas88/coi-rocket"
publish = false

[workspace]

[dependencies]
doc-comment = "0.3.2"

[dev-dependencies]
coi-rocket = { path = ".." }
coi = "0.9.2"
rocket = "0.4.4"
rocket_contrib = "0.4.4"
serde = { version = "1.0.104", features = ["derive"] }
